# craft-ls

./: README.md  charmcraft.yaml  flake.nix  noxfile.py  pyproject.toml  snapcraft.yaml  test.py  test_parse.py  test_validate.py
.github/workflows/: ci.yaml  publish-tagged.yml  release.yaml
src/craft_ls/: __init__.py  __main__.py  cli.py  core.py  server.py  types.py  types_.py
src/craft_ls/schemas/: charmcraft.json  snapcraft.json
tests/: snapcraft.yaml  test_core.py  test_server.py
